--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body > :not(header) {
 
 .dettagli {
   margin: 0 5%;
+  margin-bottom: 8%;
 }
 
 .categoria {
@@ -76,3 +77,45 @@ body > :not(header) {
 .banner {
   display: none;
 }
+
+
+
+
+.social {
+  padding-bottom: 8%;
+}
+
+.social ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0 5%;
+  justify-content: space-between;
+}
+
+.social ul li {
+  background-color: white;
+  padding: 0.5rem 0.9rem;
+  border-radius: 1rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.social .fa-facebook {
+  color: #1a77f3;
+}
+
+.social .fa-twitter {
+  color: #009eff;
+}
+
+.social .fa-instagram {
+  color: #de3d78;
+}
+
+.social .fa-pinterest, .social .fa-youtube {
+  color: #e62222;
+}
+
+
+
+
