style: aggiunto stile dettagli, versione tablet

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ main {
   margin-bottom: 1.5rem;
 }
 
+.dettagli h2 span {
+  display: none;
+}
+
 .card {
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -176,4 +180,43 @@ footer ul {
 
 footer a {
   color: white;
+}
+
+
+
+
+@media screen and (min-width: 768px) {
+  
+  header h1 {
+    margin-left: 2%;
+    text-align: left;
+  }
+
+
+
+
+  .dettagli h2 span {
+    display: inline;
+  }
+
+  .card .info h3 {
+    margin-bottom: 3rem;
+  }
+
+  .card .info {
+    padding: 5% 4% 3%;
+  }
+
+  .card .info ul {
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 0;
+    gap: 0
+  }
+  
+  .card .info ul li {
+    width: 33%;
+    margin-bottom: 2.5rem;    
+  }
+
 }
