--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,9 @@ footer a {
 
 
 
+  .dettagli {
+    margin-bottom: 5%;
+  }
 
   .dettagli h2 span {
     display: inline;
@@ -217,6 +220,28 @@ footer a {
   .card .info ul li {
     width: 33%;
     margin-bottom: 2.5rem;    
+  }
+
+
+
+
+  .social {
+    margin-bottom: 5%;
+  }
+
+  .social ul li {
+    font-size: 1.2rem;
+    padding: 0.6rem 3.5rem;
+    border-radius: 2rem;
+  }
+
+
+
+
+  .banner {
+    display: block;
+    margin-bottom: 5%;
+    padding: 0 5%;
   }
 
 }
